--- a/views/hello.erb
+++ b/views/hello.erb
@@ -2,7 +2,7 @@
 
 <form action="/goodbye">
   <label for="alice"> First Name</label>
-  <input id="alice" type="text" name="zebra>
+  <input id="alice" type="text" name="zebra">
 
   <label for="bob">Last Name</label>
   <input id="bob" type="text" name="giraffe">
