--- a/views/new_square_calc.erb
+++ b/views/new_square_calc.erb
@@ -1,7 +1,7 @@
 <h1>Square My Number</h1>>
 
 <form action="/square/new"
-  <label for=""number"> "Enter Value" </label>
+  <label for="number"> "Enter a number" </label>
   <input id="number" type="text" name="users_number">
 
   <button>Calculate Square</button>
