Added square root routes and erbs

--- a/views/square_root_calc.erb
+++ b/views/square_root_calc.erb
@@ -1,9 +1,9 @@
 <h1>Enter a Number</h1>>
 
-<form action="/square/results">
+<form action="/root/results">
   <label for="number">Enter a number</label>
   <input id="number" type="text" name="users_number">
 
-  <button>Calculate square</button>
+  <button>Calculate root</button>
 
 </form>
