Updated square root erbs

--- a/views/square_root_calc.erb
+++ b/views/square_root_calc.erb
@@ -4,6 +4,6 @@
   <label for="number">Enter a number</label>
   <input id="number" type="text" name="users_number">
 
-  <button>Calculate root</button>
+  <button>Calculate square root</button>
 
 </form>
